# msgflow-preview

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: .meta.yml
docs/blog/posts/23-02/: post.md
docs/blog/posts/25-01/: amazing_agents.md  outro.md
docs/core/: model.md
docs/getting-started/: agent.md  multimodal-agent.md
docs/guides/: sequential.md
docs/models/: chat_completation.md  image_gen.md
src/msgflow/: __init__.py  accessor.py  envs.py  exceptions.py  logger.py  message.py
src/msgflow/_private/: core.py
src/msgflow/data/databases/: base.py  database.py  faiss.py  types.py
src/msgflow/data/parsers/: base.py  openpyxl.py  python_pptx.py  types.py
src/msgflow/data/retrievers/: base.py  retriever.py  types.py
src/msgflow/generation/: signature.py
src/msgflow/generation/reasoning/: cot.py  react.py  self_consistency.py  tot.py
src/msgflow/models/: base.py  model.py  response.py  router.py  tool_call_agg.py  types.py
src/msgflow/models/clients/: openai.py  together.py  vllm.py
src/msgflow/models/local/: base.py  ctranslate2.py  timm.py  torchaudio.py  torchvision.py
src/msgflow/nn/: __init__.py  functional.py  parameter.py
src/msgflow/nn/modules/: __init__.py  agent.py  container.py  module.py  retriever.py  tool.py  transcriber.py
src/msgflow/telemetry/: events.py
src/msgflow/utils/: chat.py  encode.py  hooks.py  imports.py  inspect.py  mermaid.py  msgspec.py  pooling.py  torch.py  validation.py
