[project]
name = "msgflow"
version = "0.1.0"
description = "Messages and Dynamic workflows in Python powered by Pretrained models"
readme = "README.md"
authors = [
    { name = "Vilson Rodrigues", email = "vilsonrodrigues07@hotmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "code2mermaid>=0.3.0",
    "gevent>=24.11.1",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.5",
    "mermaid-py>=0.7.0",
    "msgspec>=0.19.0",
    "msgspec-ext",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "ray>=2.42.1",
    "soundfile>=0.13.1",
    "tomli-w>=1.2.0",
    "typing-extensions>=4.12.2",
]

[project.optional-dependencies]
openai = [
    "openai>=1.63.2",
]
data = [
    "ray[data]>=2.40.0",
]
python-pptx = [
    "python-pptx>=1.0.2",
]
faiss-cpu = [
    "faiss-cpu>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
lint = [
    "ruff>=0.9.7",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.5",
    "mkdocstrings>=0.28.1",
    "mkdocstrings-python>=1.16.1",
    "pymdown-extensions>=10.14.3",
]

[tool.uv.sources]
msgspec-ext = { git = "https://github.com/msgflow-ai/msgspec-ext-preview" }
